--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://NnamdiAgolo.github.io/micro-todo
-root: /
+url: http://example.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -102,6 +101,4 @@ theme: mt
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: git
-  repo: https://github.com/NnamdiAgolo/micro-todo
-  branch: master
+  type: ''
