--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: MicroTodo
 subtitle: ''
 description: ''
 keywords:
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://NnamdiAgolo.github.io
+url: https://NnamdiAgolo.github.io/micro-todo
 # root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -103,5 +103,5 @@ theme: mt
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/NnamdiAgolo/nnamdiagolo.github.io
+  repo: https://github.com/NnamdiAgolo/micro-todo
   branch: master
